# github_repo_management

./: .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: settings.yml
docs/: index.md
github_repo_management/: __init__.py  __main__.py  cli.py  logger.py  release.py
github_repo_management/resources/: repos.py  users.py
