[tool.poetry]
name = "github_repo_management"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyGithub = "^1.54.1"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
mkdocs = "^1.1.2"
pycodestyle = "^2.7.0"
pylint = "^2.7.2"
tox = "^3.23.0"
pyats = "^21.2"
robotframework = "^4.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
